fix: fix the color of blockquote in dark mode

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -131,10 +131,12 @@ h6:focus .header-anchor {
 }
 
 .prose blockquote {
+  color: var(--fg);
   font-weight: normal;
   font-style: normal;
   line-height: 1.5em;
   padding: 0.6em 1.2em;
+  margin-left: 0;
   opacity: 0.8;
 }
 
